update supplementary material
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -601,7 +601,7 @@ img_ioi_cv
 
 # Temporal grouping
 
-In order to investigated if participants used temporal grouping to make a boundary between each subcomponent (e.g., between legato and staccato, between forte and piano) clearer for teaching purposes, we looked at IOIs only at transition points. 
+In order to investigate if participants used temporal grouping to make boundaries between subcomponents (i.e., between legato and staccato, between forte and piano) clearer for teaching purposes, we looked at IOIs only at transition points. 
 
 ## Results
 ## Experiment 1
@@ -611,11 +611,11 @@ source(here("experiment-1/analysis/stats", "variability.R"), chdir = TRUE)
 
 ### Articulation
 
-To compare the mean IOIs at transition points between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired *t*-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (*p* `r if(ioi_art_tra_norm$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', ioi_art_tra_norm$p.value))}`). The Wilcoxon Signed-rank test revealed that IOIs at transition points were larger for the teaching condition [*Mdn* = `r ioi_tra[Condition == "teaching" & Skill == "articulation"]$Median` (ms), *IQR* = `r ioi_tra[Condition == "teaching" & Skill == "articulation"]$IQR`] than in the performing condition [*Mdn* = `r ioi_tra[Condition == "performing" & Skill == "articulation"]$Median` (ms), *IQR* = `r ioi_tra[Condition == "performing" & Skill == "articulation"]$IQR`] while playing the piece with the notated articulation (*p* `r if(ioi_art_tra_wilcoxon$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.2f', ioi_art_tra_wilcoxon$p.value))}`, *r* = `r round(wilcoxeff_art_tra$effsize, 2)`, two-tailed, *Fig \ref{fig:tra}*).
+To compare the mean IOIs at transition points between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired *t*-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (*p* `r if(ioi_art_tra_norm$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', ioi_art_tra_norm$p.value))}`). The Wilcoxon Signed-rank test revealed that IOIs at transition points were larger in the teaching condition [*Mdn* = `r ioi_tra[Condition == "teaching" & Skill == "articulation"]$Median` (ms), *IQR* = `r ioi_tra[Condition == "teaching" & Skill == "articulation"]$IQR`] than in the performing condition [*Mdn* = `r ioi_tra[Condition == "performing" & Skill == "articulation"]$Median` (ms), *IQR* = `r ioi_tra[Condition == "performing" & Skill == "articulation"]$IQR`] while playing the piece with the notated articulation (*p* `r if(ioi_art_tra_wilcoxon$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.2f', ioi_art_tra_wilcoxon$p.value))}`, *r* = `r round(wilcoxeff_art_tra$effsize, 2)`, two-tailed, *Fig \ref{fig:tra}*).
 
 ### Dynamics
 
-A paired-sample *t*-test showed that IOIs at transition points were larger for the teaching condition [*M* = `r ioi_tra[Condition == "teaching" & Skill == "dynamics"]$Mean` (ms), *SD* = `r ioi_tra[Condition == "teaching" & Skill == "dynamics"]$SD`] than the performing condition [*M* = `r ioi_tra[Condition == "performing" & Skill == "dynamics"]$Mean` (ms), *SD* = `r ioi_tra[Condition == "performing" & Skill == "dynamics"]$SD`] while playing the piece with the notated dynamics (*t*(`r ioi_dyn_tra_ttest$parameter`) = `r sprintf('%.2f', abs(ioi_dyn_tra_ttest$statistic))`, *p* `r if(ioi_dyn_tra_ttest$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.2f', ioi_dyn_tra_ttest$p.value))}`, Cohen's *d* = `r round(abs(coheneff_dyn_tra$effsize), 3)`, two-tailed, *Fig \ref{fig:tra}*).
+A paired-sample *t*-test showed that IOIs at transition points were larger in the teaching condition [*M* = `r ioi_tra[Condition == "teaching" & Skill == "dynamics"]$Mean` (ms), *SD* = `r ioi_tra[Condition == "teaching" & Skill == "dynamics"]$SD`] than in the performing condition [*M* = `r ioi_tra[Condition == "performing" & Skill == "dynamics"]$Mean` (ms), *SD* = `r ioi_tra[Condition == "performing" & Skill == "dynamics"]$SD`] while playing the piece with the notated dynamics (*t*(`r ioi_dyn_tra_ttest$parameter`) = `r sprintf('%.2f', abs(ioi_dyn_tra_ttest$statistic))`, *p* `r if(ioi_dyn_tra_ttest$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.2f', ioi_dyn_tra_ttest$p.value))}`, Cohen's *d* = `r round(abs(coheneff_dyn_tra$effsize), 3)`, two-tailed, *Fig \ref{fig:tra}*).
 
 ```{r ioi-tra-1, echo = FALSE}
 ioi_tra_plot <- data.table(subject = ioi_tra_subject[Condition == "teaching"]$SubNr, teaching = ioi_tra_subject[Condition == "teaching"]$Mean, performing = ioi_tra_subject[Condition == "performing"]$Mean, skill = ioi_tra_subject[Condition == "teaching"]$Skill)
@@ -636,7 +636,7 @@ img_ioi_tra_1 <- image_read(here("paper/image", "ioi_tra_1.png"), density = 300)
 source(here("experiment-2/analysis/stats", "variability.R"), chdir = TRUE)
 ```
 
-A paired-sample *t*-test showed that IOIs at transition points were larger for the teaching condition [*M* = `r sprintf('%.2f', ioi_tra[Condition == "teaching" & Skill == "articulation"]$Mean)`, *SD* = `r sprintf('%.3f', ioi_tra[Condition == "teaching" & Skill == "articulation"]$SD)`] than the performing condition [*M* = `r sprintf('%.2f', ioi_tra[Condition == "performing" & Skill == "articulation"]$Mean)`, *SD* = `r sprintf('%.3f', ioi_tra[Condition == "performing" & Skill == "articulation"]$SD)`] while playing the piece with the notated articulation (*t*(`r ioi_art_tra_ttest$parameter`) = `r sprintf('%.2f', abs(ioi_art_tra_ttest$statistic))`, *p* `r if(ioi_art_tra_ttest$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.2f', ioi_art_tra_ttest$p.value))}`, Cohen's *d* = `r round(abs(coheneff_art_tra$effsize), 3)`, two-tailed, *Fig \ref{fig:tra}*).
+A paired-sample *t*-test showed that IOIs at transition points were larger in the teaching condition [*M* = `r sprintf('%.2f', ioi_tra[Condition == "teaching" & Skill == "articulation"]$Mean)`, *SD* = `r sprintf('%.3f', ioi_tra[Condition == "teaching" & Skill == "articulation"]$SD)`] than in the performing condition [*M* = `r sprintf('%.2f', ioi_tra[Condition == "performing" & Skill == "articulation"]$Mean)`, *SD* = `r sprintf('%.3f', ioi_tra[Condition == "performing" & Skill == "articulation"]$SD)`] while playing the piece with the notated articulation (*t*(`r ioi_art_tra_ttest$parameter`) = `r sprintf('%.2f', abs(ioi_art_tra_ttest$statistic))`, *p* `r if(ioi_art_tra_ttest$p.value < 0.001){"< 0.001"} else {paste("= ", sprintf('%.2f', ioi_art_tra_ttest$p.value))}`, Cohen's *d* = `r round(abs(coheneff_art_tra$effsize), 3)`, two-tailed, *Fig \ref{fig:tra}*).
 
 ### Dynamics
 
