update reference number
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -66,7 +66,7 @@ Previous research has shown that demonstrators not only adjust their gestures [@
 
 Performing actions with exaggeration is straightforward for actions that are normally performed in the most efficient way possible [@pezzulo_2013]. However, how can particular aspects of actions be highlighted when the actions themselves are expressive even outside of a teaching context? This is the case in music performance, where pieces are played with expression. Expressivity is a vital component of performance and typically the main focus of music teaching [@laukka_2004]. Expressive skills are generally considered to be separate from technical skills, however, fine motor control is required to implement subtle sound modulations in expressive performance [@sloboda_2000]. In some music genres such as Western classical music, it is crucial to acquire the motor skills needed to perform a piece expressively. For example, pianists translate their own interpretations of music and convey their emotions by modulating specific parameters such as timing, smoothness and loudness of sound. This raises the question of whether and how musicians modulate their actions during didactic demonstration of expressive techniques.
 
-In naturalistic teaching settings, teachers have many possibilities for how to convey to a learner how to play a piece expressively. They may use verbal communication [@woody_2000, woody_2006] and non-verbal bodily cues [@simones_2015] as well as modulating the sounds that they are producing. In the present study, we focused entirely on the teaching of expressive techniques through sound in order to determine whether expert musicians would systematically exaggerate the actions necessary to implement a particular technique for musical expression. Pianists were asked to perform a piece to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). Articulation was assessed by key-overlap time between two consecutive notes. Positive key-overlap time indicates legato styles whereas negative key-overlap time indicates staccato styles. Dynamics was evaluated by key velocity of each key press. Higher key velocity means forte styles while lower key velocity means piano styles.
+In naturalistic teaching settings, teachers have many possibilities for how to convey to a learner how to play a piece expressively. They may use verbal communication [@woody_2000; @woody_2006] and non-verbal bodily cues [@simones_2015] as well as modulating the sounds that they are producing. In the present study, we focused entirely on the teaching of expressive techniques through sound in order to determine whether expert musicians would systematically exaggerate the actions necessary to implement a particular technique for musical expression. Pianists were asked to perform a piece to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). Articulation was assessed by key-overlap time between two consecutive notes. Positive key-overlap time indicates legato styles whereas negative key-overlap time indicates staccato styles. Dynamics was evaluated by key velocity of each key press. Higher key velocity means forte styles while lower key velocity means piano styles.
 
 If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of techniques to be taught. To the extent that experts use action modulations to support their teaching of specific techniques, they should exaggerate legato (i.e., key-overlap time should be more positive) and staccato (i.e., key-overlap time should be more negative) when teaching articulation whereas they should exaggerate forte (i.e., key velocity should be higher) and piano (i.e., key velocity should be lower) when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expressio (e.g., the smoothness of sound while teaching dynamics).
 
